# guidance-rs-explore

./: .gitignore  Cargo.toml  README.md  requirements.txt
benches/: benchmark.rs
reference/: main.py  regex_for_empty_json.txt  regex_for_simple_json.txt
src/: guidance.rs  handle_types.rs  lib.rs  main.rs  py_wrapper.rs  types.rs
