[package]
name = "guidance-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
json = "0.12.4"
jsonschema = "0.18.0"
lazy_static = "1.5.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.6"
serde = "1.0.204"
serde_json = "1.0.122" 

[[bench]]
name = "benchmark"
harness = false

