[package]
name = "guidance-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
json = "0.12.4"
jsonschema = "0.18.0"
regex = "1.10.6"
regex-syntax = "0.8.4"
serde = "1.0.204"
serde_json = "1.0.122" 

[dev-dependencies]
criterion = "0.5.1"
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }

[[bench]]
name = "benchmark"
harness = false

